--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Jesus guys, wtf?
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>WTF</title>
+  </head>
+  <body>
+    <div style="width:100%;height:0;padding-bottom:55%;position:relative;"><iframe src="https://giphy.com/embed/dSY9GgU0fWS8o" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/monty-python-life-of-brian-always-look-on-the-bright-side-dSY9GgU0fWS8o">via GIPHY</a></p>
+  </body>
+</html>
