Add Google Analytics

--- a/obama/index.html
+++ b/obama/index.html
@@ -1,12 +1,23 @@
 <html>
-    <head>
-        <title>What the fuck?</title>
-    </head>
 
-    <body>
-        <video autoplay loop style="position: fixed; right: 0; bottom: 0; min-width: 100%; min-height: 100%;">
-            <source src="./obama.mp4" type="video/mp4">
-        </video>
-    </body>
+<head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159220391-5"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-159220391-5');
+    </script>
+
+    <title>What the fuck?</title>
+</head>
+
+<body>
+    <video autoplay loop style="position: fixed; right: 0; bottom: 0; min-width: 100%; min-height: 100%;">
+        <source src="./obama.mp4" type="video/mp4">
+    </video>
+</body>
 
 </html>
