--- a/index.html
+++ b/index.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>WTF</title>
-  </head>
-  <body>
-    <div style="width:100%;height:0;padding-bottom:55%;position:relative;"><iframe src="https://giphy.com/embed/dSY9GgU0fWS8o" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/monty-python-life-of-brian-always-look-on-the-bright-side-dSY9GgU0fWS8o">via GIPHY</a></p>
-  </body>
+
+<head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159220391-5"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-159220391-5');
+  </script>
+
+  <title>WTF</title>
+</head>
+
+<body>
+  <div style="width:100%;height:0;padding-bottom:55%;position:relative;"><iframe src="https://giphy.com/embed/dSY9GgU0fWS8o" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
+  <p><a href="https://giphy.com/gifs/monty-python-life-of-brian-always-look-on-the-bright-side-dSY9GgU0fWS8o">via GIPHY</a></p>
+</body>
+
 </html>
