--- a/index.html
+++ b/index.html
@@ -4,30 +4,14 @@
 <head>
   <!-- Tracking -->
   <script async src="https://track.everyone.wtf/tracker.js" data-ackee-server="https://track.everyone.wtf" data-ackee-domain-id="9fe25924-f166-45bc-8b68-19220a545141"></script>
+  <script async src="https://inform.everyone.wtf/legal.min.js?small,fixed,noborder"></script>
 
   <title>WTF</title>
-
-  <style>
-    .legal {
-      position: absolute;
-      margin-bottom: 5px;
-      margin-right: 5px;
-      bottom: 0;
-      right: 0;
-    }
-
-    .legal>a {
-      color: blue;
-    }
-  </style>
 </head>
 
 <body>
   <div style="width:100%;height:0;padding-bottom:55%;position:relative;"><iframe src="https://giphy.com/embed/dSY9GgU0fWS8o" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div>
   <p><a href="https://giphy.com/gifs/monty-python-life-of-brian-always-look-on-the-bright-side-dSY9GgU0fWS8o">via GIPHY</a></p>
-  <small class="legal">
-    For legal reasons I must also link <a href="https://inform.everyone.wtf/" target="_blank">my Privacy Policy and Imprint</a>.
-  </small>
 </body>
 
 </html>
