Move to new stats script

--- a/obama/index.html
+++ b/obama/index.html
@@ -1,9 +1,7 @@
 <html>
 
 <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://track.everyone.wtf/tracker.js" data-ackee-server="https://track.everyone.wtf" data-ackee-domain-id="9fe25924-f166-45bc-8b68-19220a545141"></script>
-    <script async src="https://inform.everyone.wtf/legal.min.js?small,fixed"></script>
+    <script async src="https://inform.everyone.wtf/legal.min.js?small,fixed" data-site-id="9fe25924-f166-45bc-8b68-19220a545141"></script>
 
     <title>What the fuck?</title>
 </head>
