--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html>
 
 <head>
-  <!-- Tracking -->
-  <script async src="https://track.everyone.wtf/tracker.js" data-ackee-server="https://track.everyone.wtf" data-ackee-domain-id="9fe25924-f166-45bc-8b68-19220a545141"></script>
-  <script async src="https://inform.everyone.wtf/legal.min.js?small,fixed,noborder"></script>
+  <script async src="https://inform.everyone.wtf/legal.min.js?small,fixed,noborder" data-site-id="9fe25924-f166-45bc-8b68-19220a545141"></script>
 
   <title>WTF</title>
 </head>
