--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <script async src="https://inform.everyone.wtf/legal.min.js?small,fixed,noborder" data-site-id="9fe25924-f166-45bc-8b68-19220a545141"></script>
+  <script async src="https://inform.everyone.wtf/legal.min.js" data-site-id="9fe25924-f166-45bc-8b68-19220a545141"></script>
 
   <title>WTF</title>
 </head>
