--- a/obama/index.html
+++ b/obama/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <script async src="https://inform.everyone.wtf/legal.min.js?small,fixed" data-site-id="9fe25924-f166-45bc-8b68-19220a545141"></script>
+    <script async src="https://inform.everyone.wtf/legal.min.js" data-site-id="9fe25924-f166-45bc-8b68-19220a545141"></script>
 
     <title>What the fuck?</title>
 </head>
