Better view on mobile

--- a/anarchist/index.html
+++ b/anarchist/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <title>Anarchist vibes</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <script async src="https://inform.everyone.wtf/legal.min.js" data-site-id="9fe25924-f166-45bc-8b68-19220a545141"></script>
 <style>
     textarea {
